Add final touchups for search page

--- a/search.html
+++ b/search.html
@@ -52,13 +52,12 @@
       <img src="./assets/profile.jpg" class="rounded-circle" width="24" height="24" alt="profile photo">
     </div>
   </nav>
-  <section
-    class="container-fluid bg-reddis d-none col-md-12 d-md-flex flex-column justify-content-center align-items-center py-5">
-    <div class="d-flex flex-column py-2 white">
+  <section class="container-fluid bg-reddis d-none col-md-12 d-md-flex flex-column py-3">
+    <div class="d-flex flex-column py-2 white ml-5 pl-5" style="max-width: 80%;">
       <h1>ZATTIX</h1>
       <P>Buying and Selling be Simpler than This!</P>
     </div>
-    <div class="input-group container-fluid col-6 mb-3 d-flex px-5 mx-5">
+    <div class="input-group container-fluid col-6 mb-3 d-flex px-5 mx-5" style="max-width: 80%;">
       <button class="btn btn-outline-secondary dropdown-toggle bg-light mr-1" type="button" data-bs-toggle="dropdown"
         aria-expanded="false">All Departments</button>
       <ul class="dropdown-menu">
@@ -70,22 +69,22 @@
         </li>
         <li><a class="dropdown-item" href="#">Other Electronics</a></li>
       </ul>
-      <input type="text" aria-label="First name" class="form-control mr-1" placeholder="What do you search for?">
-      <input type="text" aria-label="Last name" class="form-control mr-2">
-      <button type="button" class="btn btn-secondary btn-md bg-nav ml-1">Search</button>
+      <input type="text" aria-label="First name" class="form-control mr-1 px-5" placeholder="What do you search for?">
+      <input type="text" aria-label="Last name" class="form-control mr-2 px-5">
+      <button type="button" class="btn btn-secondary btn-md bg-nav ml-1 text-muted px-4">Search</button>
     </div>
   </section>
 
   <section class="d-flex col-12 bg-light">
     <div class="col-2 d-sm-none d-md-block p-3">
-      <div class="d-flex py-3">
+      <div class="d-flex py-3 flex-sm-cloumn flex-md-column flex-lg-row">
         <div class="form-check d-flex flex-xs-column flex-md-row text-muted">
           <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
           <label class="form-check-label mt-1" for="flexCheckDefault">
             New
           </label>
         </div>
-        <div class="form-check ml-3 text-muted">
+        <div class="form-check ml-sm-0 ml-lg-3 text-muted">
           <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
           <label class="form-check-label mt-1" for="flexCheckChecked">
             Used
@@ -133,8 +132,8 @@
             <label class="form-check-label mt-1" for="flexCheckChecked">
               Custom
             </label>
-            <input class="form-control form-control-sm mx-4" type="text" placeholder="5"
-              aria-label=".form-control-sm example">
+            <input class="form-control form-control-sm mx-4 d-sm-none d-lg-block" style="max-width: 30px;" type="text"
+              placeholder="5" aria-label=".form-control-sm example">
           </div>
         </div>
       </div>
@@ -200,14 +199,14 @@
         </div>
       </div>
       <div class="border-top border-bottom my-2">
-        <div class="row g-0">
+        <div class="row g-0 bg-lg-white">
           <div class="col-md-3">
             <img src="./assets/image2.jpg" class="search-image p-2" alt="laptop-image">
           </div>
           <div class="col-md-9">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <h5 class="card-title">Projector with HD enabled</h5>
                 <div class="dropup">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
@@ -223,7 +222,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$150</button>
               </div>
             </div>
           </div>
@@ -234,10 +233,10 @@
           <div class="col-md-3">
             <img src="./assets/image3.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 bg-white">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <h5 class="card-title">Senheiser Head Phones Over the head</h5>
                 <div class="dropup">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
@@ -253,7 +252,11 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+                <div>
+                  <button type="button" class="btn bg-reddis border border-secondary border-end-1">Give a
+                    Call</button>
+                  <button type="button" class="btn bg-reddis border border-secondary border-end-1">$290</button>
+                </div>
               </div>
             </div>
           </div>
@@ -267,7 +270,7 @@
           <div class="col-md-9">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <h5 class="card-title">Touch Pad Mouse Control</h5>
                 <div class="dropup">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
@@ -283,7 +286,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$69</button>
               </div>
             </div>
           </div>
@@ -297,7 +300,7 @@
           <div class="col-md-9">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <h5 class="card-title">Lenevo Flex Phone Full Touch</h5>
                 <div class="dropup">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
@@ -313,7 +316,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$1099</button>
               </div>
             </div>
           </div>
@@ -327,7 +330,7 @@
           <div class="col-md-9">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <h5 class="card-title">I watch Series 5</h5>
                 <div class="dropup">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
@@ -343,7 +346,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$399</button>
               </div>
             </div>
           </div>
