Add linting format

--- a/search.html
+++ b/search.html
@@ -94,19 +94,19 @@
       <div class="pb-3">
         <p class="border-bottom pb-2">Type</p>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="">
           <label class="form-check-label mt-1" for="flexCheckDefault">
             Mobile Phones
           </label>
         </div>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+          <input class="form-check-input" type="checkbox" value="">
           <label class="form-check-label mt-1" for="flexCheckChecked">
             Laptops
           </label>
         </div>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+          <input class="form-check-input" type="checkbox" value="">
           <label class="form-check-label mt-1" for="flexCheckChecked">
             Cameras
           </label>
@@ -115,19 +115,19 @@
       <div class="pb-3">
         <p class="border-bottom pb-2">Size</p>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="">
           <label class="form-check-label mt-1" for="flexCheckDefault">
             Normal
           </label>
         </div>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+          <input class="form-check-input" type="checkbox" value="">
           <label class="form-check-label mt-1" for="flexCheckChecked">
             Small
           </label>
         </div>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+          <input class="form-check-input" type="checkbox" value="">
           <div class="d-flex">
             <label class="form-check-label mt-1" for="flexCheckChecked">
               Custom
@@ -140,25 +140,25 @@
       <div class="pb-3">
         <p class="border-bottom pb-2">Price Range</p>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="">
           <label class="form-check-label mt-1" for="flexCheckDefault">
             10$ - 100$
           </label>
         </div>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+          <input class="form-check-input" type="checkbox" value="">
           <label class="form-check-label mt-1" for="flexCheckChecked">
             100$ - 200$
           </label>
         </div>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+          <input class="form-check-input" type="checkbox" value="">
           <label class="form-check-label mt-1" for="flexCheckChecked">
             200$ - 400$
           </label>
         </div>
         <div class="form-check text-muted">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+          <input class="form-check-input" type="checkbox" value="">
           <label class="form-check-label mt-1" for="flexCheckChecked">
             500$ +
           </label>
@@ -211,7 +211,7 @@
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#" class="bg-nav white">Send a Message</a>
                     <a href="#">More Details</a>
                   </div>
                 </div>
@@ -241,7 +241,7 @@
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#" class="bg-nav white">Send a Message</a>
                     <a href="#">More Details</a>
                   </div>
                 </div>
@@ -275,7 +275,7 @@
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#" class="bg-nav white">Send a Message</a>
                     <a href="#">More Details</a>
                   </div>
                 </div>
@@ -305,7 +305,7 @@
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#" class="bg-nav white">Send a Message</a>
                     <a href="#">More Details</a>
                   </div>
                 </div>
@@ -335,7 +335,7 @@
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#" class="bg-nav white">Send a Message</a>
                     <a href="#">More Details</a>
                   </div>
                 </div>
@@ -352,7 +352,6 @@
           </div>
         </div>
       </div>
-    </div>
     </div>
   </section>
   <section class="d-flex justify-content-center bg-light py-5">
