Add search Page final Output

--- a/search.html
+++ b/search.html
@@ -70,13 +70,13 @@
         <li><a class="dropdown-item" href="#">Other Electronics</a></li>
       </ul>
       <input type="text" aria-label="First name" class="form-control mr-1 px-5" placeholder="What do you search for?">
-      <input type="text" aria-label="Last name" class="form-control mr-2 px-5">
+      <input type="text" aria-label="Last name" class="form-control mr-2 px-5" placeholder="Cuenca, Ecuador">
       <button type="button" class="btn btn-secondary btn-md bg-nav ml-1 text-muted px-4">Search</button>
     </div>
   </section>
 
   <section class="d-flex col-12 bg-light">
-    <div class="col-2 d-sm-none d-md-block p-3">
+    <div class="col-2 d-sm-none d-md-block p-3 hidden">
       <div class="d-flex py-3 flex-sm-cloumn flex-md-column flex-lg-row">
         <div class="form-check d-flex flex-xs-column flex-md-row text-muted">
           <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -374,7 +374,7 @@
     </nav>
   </section>
 
-  <section class="container-fluid d-sm-flex flex-sm-column flex-md-row justify-content-between align-items-center py-5">
+  <section class="d-sm-flex flex-sm-column flex-md-row justify-content-between align-items-center py-5">
     <div class="d-flex flex-column justify-content-center col-md-3 mx-2">
       <a class="d-flex align-items-center justify-content-center mb-3 text-muted" href="#">
         <img src="./assets/footer-logo.png" alt="main-logo" id="footer-image">
@@ -419,7 +419,7 @@
         <li>Contact Us</li>
       </ul>
     </div>
-    <div class="d-flex col-md-3 flex-column justify-content-center mx-2">
+    <div class="d-flex col-md-2 flex-column justify-content-center p-0">
       <div class="d-flex justify-content-around align-items-center mb-2">
         <h6 class="reddis-color">Country</h6>
         <button type="button" class="btn btn-outline-secondary">Ecuador</button>
