--- a/search.html
+++ b/search.html
@@ -168,20 +168,20 @@
     <div class="border">
       <h6 class="p-4">138 <span class="text-muted">Results for </span>"Mobile Phones" <span class="text-muted">search
           at</span> Cuenca <span class="text-muted">in Category</span> Mobiles</h6>
-      <div class="border-top border-bottom my-2">
+      <div class="border-top border-bottom">
         <div class="row g-0">
-          <div class="col-md-3">
-            <img src="./assets/image1.jpg" class="search-image p-2" alt="laptop-image">
+          <div class="col-md-5 col-lg-4">
+            <img src="./assets/image6.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
-          <div class="col-md-9">
+          <div class="col-md-6 col-lg-8">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <h5 class="card-title">I watch Series 5</h5>
                 <div class="dropup">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#" class="bg-nav white">Send a Message</a>
                     <a href="#">More Details</a>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$399</button>
               </div>
             </div>
           </div>
@@ -200,10 +200,10 @@
       </div>
       <div class="border-top border-bottom my-2">
         <div class="row g-0 bg-lg-white">
-          <div class="col-md-3">
+          <div class="col-md-5 col-lg-4">
             <img src="./assets/image2.jpg" class="search-image p-2" alt="laptop-image">
           </div>
-          <div class="col-md-9">
+          <div class="col-md-6 col-lg-8">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Projector with HD enabled</h5>
@@ -230,10 +230,40 @@
       </div>
       <div class="border-top border-bottom my-2">
         <div class="row g-0">
-          <div class="col-md-3">
+          <div class="col-md-5 col-lg-4">
+            <img src="./assets/image1.jpg" class="search-image p-2" alt="laptop-image">
+          </div>
+          <div class="col-md-6 col-lg-8">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-center">
+                <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
+                <div class="dropup">
+                  <i class="dropbtn fas fa-plus-circle fa-lg"></i>
+                  <div class="dropup-content">
+                    <a href="#">Add to Collection</a>
+                    <a href="#" class="bg-nav" id="white">Send a Message</a>
+                    <a href="#">More Details</a>
+                  </div>
+                </div>
+              </div>
+              <h5 class="reddis-color">New</h5>
+              <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
+                additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="border-top border-bottom my-2">
+        <div class="row g-0">
+          <div class="col-md-5 col-lg-4">
             <img src="./assets/image3.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
-          <div class="col-md-9 bg-white">
+          <div class="col-md-6 col-lg-8">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Senheiser Head Phones Over the head</h5>
@@ -264,10 +294,10 @@
       </div>
       <div class="border-top border-bottom my-2">
         <div class="row g-0">
-          <div class="col-md-3">
+          <div class="col-md-5 col-lg-4">
             <img src="./assets/image4.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
-          <div class="col-md-9">
+          <div class="col-md-6 col-lg-8">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Touch Pad Mouse Control</h5>
@@ -294,10 +324,10 @@
       </div>
       <div class="border-top border-bottom my-2">
         <div class="row g-0">
-          <div class="col-md-3">
+          <div class="col-md-5 col-lg-4">
             <img src="./assets/image5.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
-          <div class="col-md-9">
+          <div class="col-md-6 col-lg-8">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Lenevo Flex Phone Full Touch</h5>
@@ -322,36 +352,7 @@
           </div>
         </div>
       </div>
-      <div class="border-top border-bottom">
-        <div class="row g-0">
-          <div class="col-md-3">
-            <img src="./assets/image6.jpeg" class="search-image p-2" alt="laptop-image">
-          </div>
-          <div class="col-md-9">
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">I watch Series 5</h5>
-                <div class="dropup">
-                  <i class="dropbtn fas fa-plus-circle fa-lg"></i>
-                  <div class="dropup-content">
-                    <a href="#">Add to Collection</a>
-                    <a href="#" class="bg-nav white">Send a Message</a>
-                    <a href="#">More Details</a>
-                  </div>
-                </div>
-              </div>
-              <h5 class="reddis-color">New</h5>
-              <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
-                additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$399</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+
     </div>
   </section>
   <section class="d-flex justify-content-center bg-light py-5">
