Add Linter fixes

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
         <li><a class="dropdown-item" href="#">Other Electronics</a></li>
       </ul>
       <input type="text" aria-label="First name" class="form-control mr-1" placeholder="What do you search for?">
-      <input type="text" aria-label="Last name" class="form-control mr-2">
-      <a href="./search.html"><button type="button" class="btn btn-secondary btn-md bg-nav ml-1">Search</button>
-      </a>
+      <form class="d-flex">
+        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+        <a href="./search.html" class="btn search-button btn-secondary btn-md bg-nav ml-1">Search Here</a>
+      </form>
     </div>
   </section>
   <section class="d-md-flex justify-content-end align-items-center col-4 hidden">
