--- a/index.html
+++ b/index.html
@@ -78,101 +78,99 @@
       </form>
     </div>
   </section>
-  <section class="d-md-flex justify-content-end align-items-center col-4 hidden">
-    <h6 class="d-flex align-items-end pr-5 mt-3 text-muted">HOT ADS</h6>
-  </section>
-  <section class="d-md-flex flex-column align-items-center pb-4 hidden">
-    <div id="carousel-example0" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="card mb-3" style="max-width: 768px;">
-            <div class="row g-0 ">
-              <div class="col-md-4">
-                <img src="./assets/image1.jpg" alt="laptop-image" style="max-width: 250px; height: 100%;">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title reddis-color">Lenovo Laptop(G Series)</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a
-                    natural lead-in to
-                    additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small>By:<span class="text-muted">
-                        SunilKumar</span></small></p>
-                  <p class="card-text"><small>Location:<span class="text-muted"> Cuenca,
-                        Ecuador</span></small></p>
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
-                    <button type="button" class="btn bg-reddis border border-secondary border-end-1"><i
-                        class="fas fa-shopping-cart px-2"></i>PURCHASE ORDER</button>
-                  </div>
-                </div>
+
+  <div class="slideshow-container container align-center py-5">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides ml-lg-5 pl-lg-5">
+      <div class="numbertext">1 / 3</div>
+      <div class="card mb-3" style="max-width: 768px;">
+        <div class="row g-0 ">
+          <div class="col-md-4">
+            <img src="./assets/image1.jpg" alt="laptop-image" style="max-width: 250px; height: 100%;">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title reddis-color">Lenovo Laptop(G Series)</h5>
+              <p class="card-text">This is a wider card with supporting text below as a
+                natural lead-in to
+                additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small>By:<span class="text-muted">
+                    SunilKumar</span></small></p>
+              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca,
+                    Ecuador</span></small></p>
+              <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1"><i
+                    class="fas fa-shopping-cart px-2"></i>PURCHASE ORDER</button>
               </div>
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <div class="card mb-3" style="max-width: 768px;">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="./assets/camera1.jpg" alt="camera-image" style="max-width: 250px; height: 100%;">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title reddis-color">Canon fluid(N Series)</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a
-                    natural lead-in to
-                    additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small>By:<span class="text-muted">
-                        SunilKumar</span></small></p>
-                  <p class="card-text"><small>Location:<span class="text-muted"> Cuenca,
-                        Ecuador</span></small></p>
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn bg-reddis border border-secondary border-end-1">$690</button>
-                    <button type="button" class="btn bg-reddis border border-secondary border-end-1"><i
-                        class="fas fa-shopping-cart px-2"></i>PURCHASE ORDER</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="card mb-3" style="max-width: 768px;">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="./assets/phone1.jpeg" alt="phone-image" style="max-width: 250px; height: 100%;">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title reddis-color">Iphone 12 Pro</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a
-                    natural lead-in to
-                    additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small>By:<span class="text-muted">
-                        SunilKumar</span></small></p>
-                  <p class="card-text"><small>Location:<span class="text-muted"> Cuenca,
-                        Ecuador</span></small></p>
-                  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                    <button type="button" class="btn bg-reddis border border-secondary border-end-1">$999</button>
-                    <button type="button" class="btn bg-reddis border border-secondary border-end-1"><i
-                        class="fas fa-shopping-cart px-2"></i>PURCHASE ORDER</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carousel-example0" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel-example0" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
     </div>
-  </section>
+
+    <div class="mySlides ml-lg-5 pl-lg-5">
+      <div class="numbertext">2 / 3</div>
+      <div class="card mb-3" style="max-width: 768px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="./assets/camera1.jpg" alt="camera-image" style="max-width: 250px; height: 100%;">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title reddis-color">Canon fluid(N Series)</h5>
+              <p class="card-text">This is a wider card with supporting text below as a
+                natural lead-in to
+                additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small>By:<span class="text-muted">
+                    SunilKumar</span></small></p>
+              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca,
+                    Ecuador</span></small></p>
+              <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$690</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1"><i
+                    class="fas fa-shopping-cart px-2"></i>PURCHASE ORDER</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mySlides ml-lg-5 pl-lg-5">
+      <div class="numbertext">3 / 3</div>
+      <div class="card mb-3" style="max-width: 768px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="./assets/phone1.jpeg" alt="phone-image" style="max-width: 250px; height: 100%;">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title reddis-color">Iphone 12 Pro</h5>
+              <p class="card-text">This is a wider card with supporting text below as a
+                natural lead-in to
+                additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small>By:<span class="text-muted">
+                    SunilKumar</span></small></p>
+              <p class="card-text"><small>Location:<span class="text-muted"> Cuenca,
+                    Ecuador</span></small></p>
+              <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$999</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1"><i
+                    class="fas fa-shopping-cart px-2"></i>PURCHASE ORDER</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
   <section class="d-flex col-12 justify-content-between align-items-center border-bottom bg-light">
     <div class="d-flex align-items-center px-md-5 m-md-3">
       <i class="fab fa-500px fa-lg mr-2 mb-2"></i>
@@ -184,7 +182,7 @@
     </div>
   </section>
 
-  <section class="top-content bg-light">
+  <section class="top-content bg-light py-4">
     <div class="container-fluid">
       <div id="carousel-example" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner row w-100 mx-auto" role="listbox">
@@ -528,7 +526,7 @@
 
 
 
-  <section class="top-content bg-light">
+  <section class="top-content bg-light py-4">
     <div class="container-fluid">
       <div id="carousel-example1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner row w-100 mx-auto" role="listbox">
@@ -892,7 +890,7 @@
     </div>
   </section>
 
-  <section class="top-content bg-light">
+  <section class="top-content bg-light py-4">
     <div class="container-fluid">
       <div id="carousel-example2" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner row w-100 mx-auto" role="listbox">
@@ -1320,6 +1318,36 @@
 
 
   <!-- JavaScript Bundle with Popper -->
+  <script>
+    var slideIndex = 1;
+    showSlides(slideIndex);
+
+    // Next/previous controls
+    function plusSlides(n) {
+      showSlides(slideIndex += n);
+    }
+
+    // Thumbnail image controls
+    function currentSlide(n) {
+      showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      if (n > slides.length) { slideIndex = 1 }
+      if (n < 1) { slideIndex = slides.length }
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex - 1].style.display = "block";
+      dots[slideIndex - 1].className += " active";
+    }
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
