Add review changes

--- a/search.html
+++ b/search.html
@@ -75,7 +75,7 @@
     </div>
   </section>
 
-  <section class="d-flex col-12 bg-light">
+  <aside class="d-flex col-12 bg-light">
     <div class="col-2 d-sm-none d-md-block p-3 hidden">
       <div class="d-flex py-3 flex-sm-cloumn flex-md-column flex-lg-row">
         <div class="form-check d-flex flex-xs-column flex-md-row text-muted">
@@ -354,7 +354,7 @@
       </div>
 
     </div>
-  </section>
+  </aside>
   <section class="d-flex justify-content-center bg-light py-5">
     <nav aria-label="Page navigation example">
       <ul class="pagination">
