--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     </div>
   </section>
 
-  <div class="slideshow-container container align-center py-5">
+  <main class="slideshow-container container align-center py-5">
 
     <!-- Full-width images with number and caption text -->
-    <div class="mySlides ml-lg-5 pl-lg-5">
+    <article class="mySlides ml-lg-5 pl-lg-5">
       <div class="numbertext">1 / 3</div>
       <div class="card mb-3" style="max-width: 768px;">
         <div class="row g-0 ">
@@ -108,9 +108,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </article>
 
-    <div class="mySlides ml-lg-5 pl-lg-5">
+    <article class="mySlides ml-lg-5 pl-lg-5">
       <div class="numbertext">2 / 3</div>
       <div class="card mb-3" style="max-width: 768px;">
         <div class="row g-0">
@@ -136,9 +136,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </article>
 
-    <div class="mySlides ml-lg-5 pl-lg-5">
+    <article class="mySlides ml-lg-5 pl-lg-5">
       <div class="numbertext">3 / 3</div>
       <div class="card mb-3" style="max-width: 768px;">
         <div class="row g-0">
@@ -164,12 +164,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </article>
 
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
+  </main>
   <br>
   <section class="d-flex col-12 justify-content-between align-items-center border-bottom bg-light">
     <div class="d-flex align-items-center px-md-5 m-md-3">
