Add first review changes

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca,
                     Ecuador</span></small></p>
               <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1"><i
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$450</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white"><i
                     class="fas fa-shopping-cart px-2"></i>PURCHASE ORDER</button>
               </div>
             </div>
@@ -128,8 +128,8 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca,
                     Ecuador</span></small></p>
               <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$690</button>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1"><i
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$690</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white"><i
                     class="fas fa-shopping-cart px-2"></i>PURCHASE ORDER</button>
               </div>
             </div>
@@ -156,8 +156,8 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca,
                     Ecuador</span></small></p>
               <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$999</button>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1"><i
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$999</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white"><i
                     class="fas fa-shopping-cart px-2"></i>PURCHASE ORDER</button>
               </div>
             </div>
@@ -523,9 +523,6 @@
       <h6 class="reddis-color px-md-5">View All</h6>
     </div>
   </section>
-
-
-
   <section class="top-content bg-light py-4">
     <div class="container-fluid">
       <div id="carousel-example1" class="carousel slide" data-ride="carousel">
@@ -1312,11 +1309,6 @@
       <i class="fab fa-google-plus-g px-2"></i>
     </div>
   </footer>
-
-
-
-
-
   <!-- JavaScript Bundle with Popper -->
   <script>
     var slideIndex = 1;
