--- a/search.html
+++ b/search.html
@@ -192,7 +192,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$399</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$399</button>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$150</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$150</button>
               </div>
             </div>
           </div>
@@ -252,7 +252,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$450</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$450</button>
               </div>
             </div>
           </div>
@@ -283,9 +283,9 @@
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
                 <div>
-                  <button type="button" class="btn bg-reddis border border-secondary border-end-1">Give a
+                  <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">Give a
                     Call</button>
-                  <button type="button" class="btn bg-reddis border border-secondary border-end-1">$290</button>
+                  <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$290</button>
                 </div>
               </div>
             </div>
@@ -316,7 +316,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$69</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$69</button>
               </div>
             </div>
           </div>
@@ -346,7 +346,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1">$1099</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$1099</button>
               </div>
             </div>
           </div>
