Add review changes

--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-nav">
     <!-- Navbar content -->
     <div class="container-fluid d-flex align-items-center">
-      <a class="navbar-brand d-flex align-items-center" href="#">
+      <a class="navbar-brand d-flex align-items-center" href="./index.html">
         <img src="./assets/logo.png" alt="main-logo" width="30" height="24" class="d-inline-block align-top">
         ZATTIX
       </a>
@@ -32,7 +32,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item d-flex align-items-center mx-3 nav-element">
             <i class="fas fa-home pr-2"></i>
-            <a class="nav-element" href="#">HOME</a>
+            <a class="nav-element" href="./index.html">HOME</a>
           </li>
           <li class="nav-item d-flex align-items-center mx-3 nav-element">
             <i class="fas fa-caret-square-down pr-2"></i>
@@ -177,7 +177,7 @@
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title">I watch Series 5</h5>
-                <div class="dropup">
+                <div class="dropup hidden d-md-flex mr-4">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
@@ -207,7 +207,7 @@
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Projector with HD enabled</h5>
-                <div class="dropup">
+                <div class="dropup hidden d-md-flex mr-4">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
@@ -231,13 +231,13 @@
       <div class="border-top border-bottom my-2">
         <div class="row g-0">
           <div class="col-md-5 col-lg-4">
-            <img src="./assets/image1.jpg" class="search-image p-2" alt="laptop-image">
+            <img src="./assets/computer5.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
           <div class="col-md-6 col-lg-8">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Lenevo Laptop Touch With Mobile Phones</h5>
-                <div class="dropup">
+                <div class="dropup hidden d-md-flex mr-4">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
@@ -267,7 +267,7 @@
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Senheiser Head Phones Over the head</h5>
-                <div class="dropup">
+                <div class="dropup hidden d-md-flex mr-4">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
@@ -295,13 +295,13 @@
       <div class="border-top border-bottom my-2">
         <div class="row g-0">
           <div class="col-md-5 col-lg-4">
-            <img src="./assets/image4.jpeg" class="search-image p-2" alt="laptop-image">
+            <img src="./assets/image6.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
           <div class="col-md-6 col-lg-8">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title">Touch Pad Mouse Control</h5>
-                <div class="dropup">
+                <h5 class="card-title">I watch Series 5</h5>
+                <div class="dropup hidden d-md-flex mr-4">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
@@ -316,7 +316,7 @@
               <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
               <div class="d-flex justify-content-between align-items-center">
                 <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
-                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$69</button>
+                <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$399</button>
               </div>
             </div>
           </div>
@@ -325,13 +325,13 @@
       <div class="border-top border-bottom my-2">
         <div class="row g-0">
           <div class="col-md-5 col-lg-4">
-            <img src="./assets/image5.jpeg" class="search-image p-2" alt="laptop-image">
+            <img src="./assets/computer5.jpeg" class="search-image p-2" alt="laptop-image">
           </div>
           <div class="col-md-6 col-lg-8">
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center">
                 <h5 class="card-title">Lenevo Flex Phone Full Touch</h5>
-                <div class="dropup">
+                <div class="dropup hidden d-md-flex mr-4">
                   <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                   <div class="dropup-content">
                     <a href="#">Add to Collection</a>
@@ -375,9 +375,9 @@
     </nav>
   </section>
 
-  <section class="d-sm-flex flex-sm-column flex-md-row justify-content-between align-items-center py-5">
+  <section class="container-fluid d-sm-flex flex-sm-column flex-md-row justify-content-between align-items-center py-5">
     <div class="d-flex flex-column justify-content-center col-md-3 mx-2">
-      <a class="d-flex align-items-center justify-content-center mb-3 text-muted" href="#">
+      <a class="d-flex align-items-center justify-content-center mb-3 text-muted" href="./index.html">
         <img src="./assets/footer-logo.png" alt="main-logo" id="footer-image">
         ZATTIX
       </a>
@@ -388,39 +388,45 @@
     <div class="d-flex flex-column col-md-3 mx-2 my-0">
       <h6 class="border-bottom reddis-color">Categories</h6>
       <div class="d-flex">
-        <ul class="d-flex flex-column text-muted mr-4">
-          <li>Mobile Phones</li>
-          <li>Computers</li>
-          <li>Desktops</li>
-          <li>General Electronics</li>
-          <li>Spare Parts</li>
-          <li>Computer Parts</li>
-          <li>More</li>
-        </ul>
-        <ul class="d-flex flex-column text-muted">
-          <li>Mobile Phones</li>
-          <li>Computers</li>
-          <li>Desktops</li>
-          <li>General Electronics</li>
-          <li>Spare Parts</li>
-          <li>Computer Parts</li>
-          <li>More</li>
-        </ul>
+        <a href="#" class="text-decoration-none">
+          <ul class="d-flex flex-column text-muted mr-4">
+            <li>Mobile Phones</li>
+            <li>Computers</li>
+            <li>Desktops</li>
+            <li>General Electronics</li>
+            <li>Spare Parts</li>
+            <li>Computer Parts</li>
+            <li>More</li>
+          </ul>
+        </a>
+        <a href="#" class="text-decoration-none">
+          <ul class="d-flex flex-column text-muted">
+            <li>Mobile Phones</li>
+            <li>Computers</li>
+            <li>Desktops</li>
+            <li>General Electronics</li>
+            <li>Spare Parts</li>
+            <li>Computer Parts</li>
+            <li>More</li>
+          </ul>
+        </a>
       </div>
     </div>
     <div class="d-flex flex-column col-md-3 mx-2">
       <h6 class="border-bottom reddis-color">Navigation</h6>
-      <ul class="d-flex flex-column text-muted">
-        <li>Home</li>
-        <li>Sign Up</li>
-        <li>Sign In</li>
-        <li>Terms and Conditions</li>
-        <li>FAQ</li>
-        <li>Help</li>
-        <li>Contact Us</li>
-      </ul>
+      <a href="#" class="text-decoration-none">
+        <ul class="d-flex flex-column text-muted">
+          <li>Home</li>
+          <li>Sign Up</li>
+          <li>Sign In</li>
+          <li>Terms and Conditions</li>
+          <li>FAQ</li>
+          <li>Help</li>
+          <li>Contact Us</li>
+        </ul>
+      </a>
     </div>
-    <div class="d-flex col-md-2 flex-column justify-content-center p-0">
+    <div class="d-flex col-md-2 flex-column justify-content-center mx-2">
       <div class="d-flex justify-content-around align-items-center mb-2">
         <h6 class="reddis-color">Country</h6>
         <button type="button" class="btn btn-outline-secondary">Ecuador</button>
@@ -437,13 +443,15 @@
   </section>
   <footer class="container-fluid d-sm-flex justify-content-between align-items-center px-4 py-3 border-top">
     <p class="pl-2 pt-2 text-muted">Copy rights @Zattix 2020. all rights reserved. Designed by Sunil</p>
-    <div class="text-muted align-center">
-      <i class="fab fa-facebook-f px-2"></i>
-      <i class="fab fa-yahoo px-2"></i>
-      <i class="fab fa-twitter px-2"></i>
-      <i class="fab fa-linkedin-in px-2"></i>
-      <i class="fab fa-google-plus-g px-2"></i>
-    </div>
+    <a href="#" class="text-decoration-none">
+      <div class="text-muted align-center">
+        <i class="fab fa-facebook-f px-2"></i>
+        <i class="fab fa-yahoo px-2"></i>
+        <i class="fab fa-twitter px-2"></i>
+        <i class="fab fa-linkedin-in px-2"></i>
+        <i class="fab fa-google-plus-g px-2"></i>
+      </div>
+    </a>
   </footer>
 
 
