--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-nav">
     <!-- Navbar content -->
     <div class="container-fluid d-flex align-items-center">
-      <a class="navbar-brand d-flex align-items-center" href="#">
+      <a class="navbar-brand d-flex align-items-center" href="./index.html">
         <img src="./assets/logo.png" alt="main-logo" width="30" height="24" class="d-inline-block align-top">
         ZATTIX
       </a>
@@ -33,7 +33,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item d-flex align-items-center mx-3 nav-element">
             <i class="fas fa-home pr-2"></i>
-            <a class="nav-element" href="#">HOME</a>
+            <a class="nav-element" href="./index.html">HOME</a>
           </li>
           <li class="nav-item d-flex align-items-center mx-3 nav-element">
             <i class="fas fa-caret-square-down pr-2"></i>
@@ -54,12 +54,12 @@
     </div>
   </nav>
   <section
-    class="container-fluid bg-reddis d-none col-md-12 d-md-flex flex-column justify-content-center align-items-center py-5">
+    class="container-fluid bg-reddis col-md-12 d-md-flex flex-column justify-content-center align-items-center py-5">
     <div class="d-flex flex-column justify-content-center align-items-center py-5 white">
       <h1>ZATTIX</h1>
       <P>Buying and Selling be Simpler than This!</P>
     </div>
-    <div class="input-group container-fluid col-6 mb-3 d-flex px-5 mx-5">
+    <div class="input-group container-fluid col-9 col-md-6 mb-3 d-flex px-5 mx-5">
       <button class="btn btn-outline-secondary dropdown-toggle bg-light mr-1" type="button" data-bs-toggle="dropdown"
         aria-expanded="false">All Departments</button>
       <ul class="dropdown-menu">
@@ -79,7 +79,7 @@
     </div>
   </section>
 
-  <main class="slideshow-container container align-center py-5">
+  <main class="slideshow-container container align-center py-5 hidden d-md-block">
 
     <!-- Full-width images with number and caption text -->
     <article class="mySlides ml-lg-5 pl-lg-5">
@@ -1239,9 +1239,9 @@
       </div>
     </div>
   </section>
-  <section class="container-fluid d-sm-flex flex-sm-column flex-md-row justify-content-between align-items-center py-5">
+  <section class="container-fluid d-sm-flex flex-sm-column flex-md-row justify-content-between py-5">
     <div class="d-flex flex-column justify-content-center col-md-3 mx-2">
-      <a class="d-flex align-items-center justify-content-center mb-3 text-muted" href="#">
+      <a class="d-flex align-items-center justify-content-center mb-3 text-muted" href="./index.html">
         <img src="./assets/footer-logo.png" alt="main-logo" id="footer-image">
         ZATTIX
       </a>
@@ -1252,48 +1252,54 @@
     <div class="d-flex flex-column col-md-3 mx-2 my-0">
       <h6 class="border-bottom reddis-color">Categories</h6>
       <div class="d-flex">
-        <ul class="d-flex flex-column text-muted mr-4">
-          <li>Mobile Phones</li>
-          <li>Computers</li>
-          <li>Desktops</li>
-          <li>General Electronics</li>
-          <li>Spare Parts</li>
-          <li>Computer Parts</li>
-          <li>More</li>
-        </ul>
-        <ul class="d-flex flex-column text-muted">
-          <li>Mobile Phones</li>
-          <li>Computers</li>
-          <li>Desktops</li>
-          <li>General Electronics</li>
-          <li>Spare Parts</li>
-          <li>Computer Parts</li>
-          <li>More</li>
-        </ul>
+        <a href="#" class="text-decoration-none">
+          <ul class="d-flex flex-column text-muted mr-4">
+            <li>Mobile Phones</li>
+            <li>Computers</li>
+            <li>Desktops</li>
+            <li>General Electronics</li>
+            <li>Spare Parts</li>
+            <li>Computer Parts</li>
+            <li>More</li>
+          </ul>
+        </a>
+        <a href="#" class="text-decoration-none">
+          <ul class="d-flex flex-column text-muted">
+            <li>Mobile Phones</li>
+            <li>Computers</li>
+            <li>Desktops</li>
+            <li>General Electronics</li>
+            <li>Spare Parts</li>
+            <li>Computer Parts</li>
+            <li>More</li>
+          </ul>
+        </a>
       </div>
     </div>
     <div class="d-flex flex-column col-md-3 mx-2">
       <h6 class="border-bottom reddis-color">Navigation</h6>
-      <ul class="d-flex flex-column text-muted">
-        <li>Home</li>
-        <li>Sign Up</li>
-        <li>Sign In</li>
-        <li>Terms and Conditions</li>
-        <li>FAQ</li>
-        <li>Help</li>
-        <li>Contact Us</li>
-      </ul>
+      <a href="#" class="text-decoration-none">
+        <ul class="d-flex flex-column text-muted">
+          <li>Home</li>
+          <li>Sign Up</li>
+          <li>Sign In</li>
+          <li>Terms and Conditions</li>
+          <li>FAQ</li>
+          <li>Help</li>
+          <li>Contact Us</li>
+        </ul>
+      </a>
     </div>
     <div class="d-flex col-md-2 flex-column justify-content-center mx-2">
-      <div class="d-flex justify-content-around align-items-center mb-2">
+      <div class="d-flex justify-content-between align-items-center mb-2">
         <h6 class="reddis-color">Country</h6>
         <button type="button" class="btn btn-outline-secondary">Ecuador</button>
       </div>
-      <div class="d-flex justify-content-around align-items-center mb-2">
+      <div class="d-flex justify-content-between align-items-center mb-2">
         <h6 class="reddis-color">Language</h6>
         <button type="button" class="btn btn-outline-secondary">English</button>
       </div>
-      <div class="d-flex justify-content-around align-items-center mb-2">
+      <div class="d-flex justify-content-between align-items-center mb-2">
         <h6 class="reddis-color">Currency</h6>
         <button type="button" class="btn btn-outline-secondary">US Dollar</button>
       </div>
@@ -1301,13 +1307,15 @@
   </section>
   <footer class="container-fluid d-sm-flex justify-content-between align-items-center px-4 py-3 border-top">
     <p class="pl-2 pt-2 text-muted">Copy rights @Zattix 2020. all rights reserved. Designed by Sunil</p>
-    <div class="text-muted align-center">
-      <i class="fab fa-facebook-f px-2"></i>
-      <i class="fab fa-yahoo px-2"></i>
-      <i class="fab fa-twitter px-2"></i>
-      <i class="fab fa-linkedin-in px-2"></i>
-      <i class="fab fa-google-plus-g px-2"></i>
-    </div>
+    <a href="#" class="text-decoration-none">
+      <div class="text-muted align-center">
+        <i class="fab fa-facebook-f px-2"></i>
+        <i class="fab fa-yahoo px-2"></i>
+        <i class="fab fa-twitter px-2"></i>
+        <i class="fab fa-linkedin-in px-2"></i>
+        <i class="fab fa-google-plus-g px-2"></i>
+      </div>
+    </a>
   </footer>
   <!-- JavaScript Bundle with Popper -->
   <script>
