--- a/index.html
+++ b/index.html
@@ -1291,15 +1291,15 @@
       </a>
     </div>
     <div class="d-flex col-md-2 flex-column justify-content-center mx-2">
-      <div class="d-flex justify-content-between align-items-center mb-2">
+      <div class="d-flex justify-content-around align-items-center mb-2">
         <h6 class="reddis-color">Country</h6>
         <button type="button" class="btn btn-outline-secondary">Ecuador</button>
       </div>
-      <div class="d-flex justify-content-between align-items-center mb-2">
+      <div class="d-flex justify-content-around align-items-center mb-2">
         <h6 class="reddis-color">Language</h6>
         <button type="button" class="btn btn-outline-secondary">English</button>
       </div>
-      <div class="d-flex justify-content-between align-items-center mb-2">
+      <div class="d-flex justify-content-around align-items-center mb-2">
         <h6 class="reddis-color">Currency</h6>
         <button type="button" class="btn btn-outline-secondary">US Dollar</button>
       </div>
