--- a/search.html
+++ b/search.html
@@ -70,8 +70,9 @@
           </li>
           <li><a class="dropdown-item" href="#">Other Electronics</a></li>
         </ul>
-        <input type="text" aria-label="First name" class="form-control mr-1 px-5" placeholder="What do you search for?">
-        <input type="text" aria-label="Last name" class="form-control mr-2 px-5" placeholder="Cuenca, Ecuador">
+        <input type="text" aria-label="First name" class="form-control mr-1 px-md-5"
+          placeholder="What do you search for?">
+        <input type="text" aria-label="Last name" class="form-control mr-2 px-md-5" placeholder="Cuenca, Ecuador">
         <button type="button" class="btn btn-secondary btn-md bg-nav ml-1 text-muted px-4">Search</button>
       </div>
     </section>
@@ -166,7 +167,7 @@
           </div>
         </div>
       </div>
-      <div class="border">
+      <div class="border col-12 col-md-10">
         <h6 class="p-4">138 <span class="text-muted">Results for </span>"Mobile Phones" <span class="text-muted">search
             at</span> Cuenca <span class="text-muted">in Category</span> Mobiles</h6>
         <div class="border-top border-bottom">
@@ -191,7 +192,7 @@
                 <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
                   additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center mr-4">
                   <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
                   <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$399</button>
                 </div>
@@ -221,7 +222,7 @@
                 <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
                   additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center mr-4">
                   <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
                   <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$150</button>
                 </div>
@@ -242,7 +243,7 @@
                     <i class="dropbtn fas fa-plus-circle fa-lg"></i>
                     <div class="dropup-content">
                       <a href="#">Add to Collection</a>
-                      <a href="#" class="bg-nav" id="white">Send a Message</a>
+                      <a href="#" class="bg-nav white">Send a Message</a>
                       <a href="#">More Details</a>
                     </div>
                   </div>
@@ -251,7 +252,7 @@
                 <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
                   additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center mr-4">
                   <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
                   <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$450</button>
                 </div>
@@ -281,7 +282,7 @@
                 <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
                   additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center mr-4">
                   <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
                   <div>
                     <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">Give a
@@ -315,7 +316,7 @@
                 <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
                   additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center mr-4">
                   <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
                   <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$399</button>
                 </div>
@@ -345,7 +346,7 @@
                 <p class="card-text text-muted">This is a wider card with supporting text below as a natural lead-in to
                   additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small>Location:<span class="text-muted"> Cuenca, Ecuador</span></small></p>
-                <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex justify-content-between align-items-center mr-4">
                   <p class="card-text"><small class="text-muted">23 Nov 2020</small></p>
                   <button type="button" class="btn bg-reddis border border-secondary border-end-1 white">$1099</button>
                 </div>
@@ -376,11 +377,10 @@
       </nav>
     </section>
 
-    <section
-      class="container-fluid d-sm-flex flex-sm-column flex-md-row justify-content-between align-items-center py-5">
+    <section class="container-fluid d-sm-flex flex-sm-column flex-md-row py-5">
       <div class="d-flex flex-column justify-content-center col-md-3 mx-2">
         <a class="d-flex align-items-center justify-content-center mb-3 text-muted" href="./index.html">
-          <img src="./assets/footer-logo.png" alt="main-logo" id="footer-image">
+          <img src="./assets/footer-logo.png" alt="main-logo footer-image">
           ZATTIX
         </a>
         <p class="text-muted">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to
@@ -388,7 +388,9 @@
           be used before final copy.</p>
       </div>
       <div class="d-flex flex-column col-md-3 mx-2 my-0">
-        <h6 class="border-bottom reddis-color">Categories</h6>
+        <a href="#" class="text-decoration-none">
+          <h6 class="border-bottom reddis-color">Categories</h6>
+        </a>
         <div class="d-flex">
           <a href="#" class="text-decoration-none">
             <ul class="d-flex flex-column text-muted mr-4">
@@ -401,7 +403,7 @@
               <li>More</li>
             </ul>
           </a>
-          <a href="#" class="text-decoration-none">
+          <a href="#" class="text-decoration-none d-md-none d-lg-block ">
             <ul class="d-flex flex-column text-muted">
               <li>Mobile Phones</li>
               <li>Computers</li>
@@ -415,7 +417,9 @@
         </div>
       </div>
       <div class="d-flex flex-column col-md-3 mx-2">
-        <h6 class="border-bottom reddis-color">Navigation</h6>
+        <a href="#" class="text-decoration-none">
+          <h6 class="border-bottom reddis-color">Navigation</h6>
+        </a>
         <a href="#" class="text-decoration-none">
           <ul class="d-flex flex-column text-muted">
             <li>Home</li>
@@ -428,17 +432,23 @@
           </ul>
         </a>
       </div>
-      <div class="d-flex col-md-2 flex-column justify-content-center mx-2">
+      <div class="d-flex col-md-2 flex-column mx-2">
         <div class="d-flex justify-content-around align-items-center mb-2">
-          <h6 class="reddis-color">Country</h6>
+          <a href="#" class="text-decoration-none">
+            <h6 class="reddis-color pr-2">Country</h6>
+          </a>
           <button type="button" class="btn btn-outline-secondary">Ecuador</button>
         </div>
         <div class="d-flex justify-content-around align-items-center mb-2">
-          <h6 class="reddis-color">Language</h6>
+          <a href="#" class="text-decoration-none">
+            <h6 class="reddis-color pr-2">Language</h6>
+          </a>
           <button type="button" class="btn btn-outline-secondary">English</button>
         </div>
         <div class="d-flex justify-content-around align-items-center mb-2">
-          <h6 class="reddis-color">Currency</h6>
+          <a href="#" class="text-decoration-none">
+            <h6 class="reddis-color pr-2">Currency</h6>
+          </a>
           <button type="button" class="btn btn-outline-secondary">US Dollar</button>
         </div>
       </div>
